<resources>
    <string name="app_name">What\'s The Vibe</string>
    <string name="welcome_message">What\'s The Vibe?</string>
    <string name="begin_button_text">Begin</string>
    <string name="share_button_text">SHARE</string>
    <string name="question_text">Base Question Text</string>
    <string name="next_button_text">Next</string>
    <string name="answer1_text">Answer1</string>
    <string name="answer2_text">Answer2</string>
    <string name="answer3_text">Answer3</string>
    <string name="answer4_text">Answer4</string>
    <string name="result_text">This is the Vibe!</string>
    <string name="restart_button_text">Restart</string>
    <string name="question_mark">\?</string>
    <string name="back">Back</string>

    <string-array name="Questions">
        <item>How tired are you</item>
        <item>Question2</item>
    </string-array>

    <string-array name="Answer1">
        <item>Yes</item>
        <item>No</item>
        <item>Maybe</item>
        <item>Other</item>
    </string-array>
    <string-array name="Answer2">
        <item>Answer1</item>
        <item>Answer2</item>
        <item>Answer3</item>
        <item>Answer4</item>
    </string-array>

    <array name= "AllAnswers">
        <item>@array/Answer1</item>
        <item>@array/Answer2</item>
    </array>

</resources>