<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/padding"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:id="@+id/quiz_activity">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/question_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        />
    <RadioGroup
        android:id="@+id/answer_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/question_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp">

        <RadioButton
            android:id="@+id/answer1"
            style="@style/question_buttons_portrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/answer1_text"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/answer2"
            style="@style/question_buttons_portrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/answer2_text"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/answer3"
            style="@style/question_buttons_portrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/answer3_text"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/answer4"
            style="@style/question_buttons_portrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/answer4_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button_text"
        app:layout_constraintTop_toBottomOf="@id/answer_radio_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="30sp"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>