<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/padding"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/question_text"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/result_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/fredoka_one"
        android:layout_marginTop="25dp"
        />

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="500px"
        android:layout_height="500px"
        app:layout_constraintTop_toBottomOf="@id/result_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:src="@drawable/basic_image" />


    <TextView
        android:id="@+id/song_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Playlist/Song Name..."
        android:textAlignment="center"
        android:textSize="37sp"
        app:layout_constraintTop_toBottomOf="@id/result_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/fredoka_one"
        />
    <Button
        android:id="@+id/share_button"
        style="@style/begin_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_button_text"
        app:layout_constraintTop_toBottomOf="@id/song_name_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/fredoka_one"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/restart_button"
        style="@style/begin_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart_button_text"
        app:layout_constraintTop_toBottomOf="@id/share_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/fredoka_one"
        android:layout_marginTop="25dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>